--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,55 @@
 
+@ARTICLE{Kininmonth2019-jl,
+  title    = "Strategies in scheduling marine protected area establishment in a
+              network system",
+  author   = "Kininmonth, Stuart and Weeks, Rebecca and Abesamis, Rene A and
+              Bernardo, Lawrence Patrick C and Beger, Maria and Treml, Eric A
+              and Williamson, David and Pressey, Robert L",
+  abstract = "Instantaneous implementation of systematic conservation plans at
+              regional scales is rare. More typically, planned actions are
+              applied incrementally over periods of years or decades. During
+              protracted implementation, the character of the connected
+              ecological system will change as a function of external
+              anthropogenic pressures, local metapopulation processes, and
+              environmental fluctuations. For heavily exploited systems,
+              habitat quality will deteriorate as the plan is implemented,
+              potentially influencing the schedule of protected area
+              implementation necessary to achieve conservation objectives.
+              Understanding the best strategy to adopt for applying management
+              within a connected environment is desirable, especially given
+              limited conservation resources. Here, we model the sequential
+              application of no-take marine protected areas (MPAs) in the
+              central Philippines within a metapopulation framework, using a
+              range of network-based decision rules. The model was based on
+              selecting 33 sites for protection from 101 possible sites over a
+              35-yr period. The graph-theoretic network criteria to select
+              sites for protection included PageRank, maximum degree, closeness
+              centrality, betweenness centrality, minimum degree, random, and
+              historical events. We also included a dynamic strategy called
+              colonization-extinction rate that was updated every year based on
+              the changing capacity of each site to produce and absorb larvae.
+              Each rule was evaluated in the context of achieving the maximum
+              metapopulation mean lifetime at the conclusion of the
+              implementation phase. MPAs were designated through the alteration
+              of the extinction risk parameter. The highest ranked criteria
+              were PageRank while the actual implementation from historical
+              records ranked lowest. Our results indicate that protecting the
+              sites ranked highest with regard to larval supply is likely to
+              yield the highest benefit for fish abundance and fish
+              metapopulation persistence. Model results highlighted the
+              benefits of including network processes in conservation planning.",
+  journal  = "Ecol. Appl.",
+  volume   =  29,
+  number   =  1,
+  pages    = "e01820",
+  month    =  jan,
+  year     =  2019,
+  keywords = "PageRank algorithm; Philippines; conservation planning; larval
+              networks; marine protected areas; metapopulation; scheduled
+              implementation",
+  language = "en"
+}
+
 @ARTICLE{Saura2009-sa,
   title    = "Conefor Sensinode 2.2: A software package for quantifying the
               importance of habitat patches for landscape connectivity",
