--- a/docs/glossary.Rmd
+++ b/docs/glossary.Rmd
@@ -25,7 +25,7 @@ For some of the connectivity metrics (e.g. Focus Area Donors), it is important t
 
 Marxan Connect can calculate various network metrics (e.g. centrality) and several metapopulation-like measures (e.g., out-flow), which can be used as conservation features in Marxan.
 
-It should be noted that both of approaches of incorporating connectivity into Marxan (as conservation features or as an [spatial dependency](glossary.html#connectivity_as_spatial_dependency)) can be used alone or in combination. In all cases, an appropriate level of sensitivity testing should be completed to help with interpretation and communication of outcomes. 
+It should be noted that both of approaches of incorporating connectivity into Marxan (as conservation features or as an [spatial dependency](glossary.html#connectivity-as-spatial-dependency)) can be used alone or in combination. In all cases, an appropriate level of sensitivity testing should be completed to help with interpretation and communication of outcomes. 
 
 
 ## In-Degree
@@ -441,7 +441,7 @@ p <- ggraph(graph,layout="fr") +
 
 $${\displaystyle FAR(v) = \sum_{t \ne v \in V(FA)}c_{t,v}N_t}$$
 
-where ${N_t}$ is the amount of <a href="#GONE" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${t}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the focus area.
+where ${N_t}$ is the amount of <a href="#gone" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${t}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the focus area.
 
 **Illustration**
 
@@ -481,7 +481,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 $${\displaystyle FAD(v) = \sum_{t \ne v \in V(FA)}c_{v,t}N_v}$$
 
-where ${N_v}$ is the amount of <a href="#GONE" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${v}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the focus area.
+where ${N_v}$ is the amount of <a href="#gone" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${v}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the focus area.
 
 **Illustration**
 
@@ -521,7 +521,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 $${\displaystyle AAR(v) = \sum_{t \ne v \in V(AA)}c_{t,v}N_t}$$
 
-where ${N_t}$ is the amount of <a href="#GONE" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${t}$ and ${V(AA)}$ are the ${V}$ which spatially overlap with the avoidance area.
+where ${N_t}$ is the amount of <a href="#gone" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${t}$ and ${V(AA)}$ are the ${V}$ which spatially overlap with the avoidance area.
 
 **Illustration**
 
@@ -561,7 +561,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 $${\displaystyle AAD(v) = \sum_{t \ne v \in V(AA)}c_{v,t}N_v}$$
 
-where ${N_v}$ is the amount of <a href="#GONE" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${v}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the avoidance area.
+where ${N_v}$ is the amount of <a href="#gone" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${v}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the avoidance area.
 
 **Illustration**
 
@@ -719,7 +719,7 @@ Acronym for Genes, Organisms, Nutrients, Energy
 
 # Local Production
 
-The amount of <a href="#GONE" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in each planning unit (user supplied data).
+The amount of <a href="#gone" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in each planning unit (user supplied data).
 
 # Planning area 
 
@@ -749,11 +749,11 @@ An open-source geospatial data format produced by ESRI (developers of ArcGIS), c
 
 In Marxan, the boundary definitions (*i.e.* `boundary.dat`), quantifying the shared boundary length among adjacent planning units, in conjunction with the Boundary Length Modifier (BLM), a weighting parameter to 'tune' the influence of the boundaries, can help achieve a solution with a reasonable edge to area ratio (*i.e.* minimize edge while still achieving representation targets). Typically boundaries are quantified as the length of the shared boundary between planning units. Marxan Connect allows users to use alternative boundary definitions, "Spatial Dependencies", to incorporate connectivity data (see @Beger2010-ir) and the BLM is then used as a Connectivity Strength Modifier. This encourages the selection of connected networks of protected areas and minimizes the effective "edge" of the entire system based on the supplied connectivity data.
 
-Alternatively (or in conjunction), connectivity may be incorporated into the Marxan analysis by using [Conservation Features](glossary.html#conservation_feature), where important sites for connectivity can be targeted directly.
+Alternatively (or in conjunction), connectivity may be incorporated into the Marxan analysis by using [Conservation Features](glossary.html#conservation-feature), where important sites for connectivity can be targeted directly.
 
 ## Connectivity as spatial dependency
 
-Directly substitutes the supplied connectivity data (*i.e.* Spatial Dependencies) for the boundary lengths in the boundary definitions file (*i.e.* `boundary.dat`; see @Beger2010-ir). Consequently, instead of reducing the spatial edges (see [above](#spatial_dependency)), it will reduce the amount of organisms exiting the reserve network. This approach assumes the user has provided appropriate connectivity data (*e.g.* appropriate scale, units, and rank-order).
+Directly substitutes the supplied connectivity data (*i.e.* Spatial Dependencies) for the boundary lengths in the boundary definitions file (*i.e.* `boundary.dat`; see @Beger2010-ir). Consequently, instead of reducing the spatial edges (see [above](glossary.html#spatial-dependency)), it will reduce the amount of organisms exiting the reserve network. This approach assumes the user has provided appropriate connectivity data (*e.g.* appropriate scale, units, and rank-order).
 
 <!--
 Removing MPG for now, the app was not calculating correctly!
